# Fit-Launcher

./: package-lock.json  package.json
docs/: master-plan-real-debrid-integration.md  plan-real-debrid-token-management.md  plan-replace-downloading-with-real-debrid.md  rd_api.md  real-debrid-api.md
src-tauri/: Cargo.toml
src-tauri/local-crates/fit-launcher-config/src/settings/: config.rs  creation.rs
src-tauri/local-crates/fit-launcher-real-debrid/: Cargo.toml
src-tauri/local-crates/fit-launcher-real-debrid/src/: auth.rs  client.rs  commands.rs  error.rs  lib.rs  model.rs
src-tauri/local-crates/fit-launcher-ui-automation/src/: mighty_automation.rs  mighty_commands.rs
src-tauri/src/: main.rs
src/pages/Download-Game-UUID-01/: Download-Game-UUID.jsx
src/pages/Settings-01/: Settings.jsx
src/pages/Settings-01/Settings-Categories/RealDebrid/: RealDebrid.css  RealDebrid.jsx
