[package]
name = "fit-launcher-real-debrid"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tauri = { workspace = true }
fit-launcher-config = { path = "../fit-launcher-config" }
